[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setup-hibernate"
version = "0.1.0"
description = "Configure Linux hibernation (swapfile, GRUB resume, mkinitcpio resume hook)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Kevin Veen-Birkenbach" }]
keywords = ["hibernate", "hibernation", "swap", "grub", "mkinitcpio", "linux", "arch", "manjaro"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://www.veen.world"
Repository = "https://github.com/kevinveenbirkenbach/setup-hibernate"
Issues = "https://github.com/kevinveenbirkenbach/setup-hibernate/issues"

[project.scripts]
setup-hibernate = "setup_hibernate.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
